feat: product update and delete
